Fixed wrong font file

--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -74,6 +74,7 @@ html, body {
     background-color: var(--MAIN-TEXT-background-color) !important;
     font-family: "Atkinson" !important;
     font-size: 20px !important;
+    height: 100vh !important;
 }
 
 
